Feature/7 user model change (#8)
* 다낚아 -> 촌놀자 #7

* 체험마을 정보 체크후 리스트로 반환 #7

* 체험마을 사업자 등록 서비스 로직 변경 #7

* 사업자 등록 전 외래키가 등록되지 않은값만 검색하도록 변경, 사업자 등록 로직 빠진 데이터값 추가#7

* set 설정으로인한 파라미터로 필요없는 dto 삭제, 유저상태에서의 사업자 등록#7